infra/kustomize/overlays/prod/yamls/bundestagio-admin-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bundestagio-admin-depl
spec:
  selector:
    matchLabels:
      app: bundestagio-admin
  template:
    spec:
      containers:
        - name: bundestagio-admin
          resources:
            limits:
              memory: "500M"
              cpu: "100m"
            requests:
              memory: "100M"
              cpu: "30m"
