infra/kustomize/overlays/prod/yamls/democracy-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: democracy-api-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: democracy-api
  template:
    spec:
      containers:
        - name: democracy-api
          resources:
            requests:
              memory: "400M"
              cpu: "500m"
            limits:
              memory: "1000M"
              cpu: "1000m"
