infra/kustomize/overlays/prod/yamls/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: 'mongo'
  replicas: 5
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          command:
            - mongod
            - '--bind_ip_all'
            - '--replSet'
            - rs0
          resources:
            requests:
              memory: '3G'
              cpu: '300m'
            limits:
              memory: '5G'
              cpu: '2000m'
  volumeClaimTemplates:
    - metadata:
        name: mongo-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
