infra/kustomize/overlays/prod/yamls/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.democracy-app.de
        - democracy-app.de
        - api.bundestag.io
        - admin.bundestag.io
      secretName: democracy-tls
  rules:
    - host: api.democracy-app.de
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: democracy-api-srv
              servicePort: 3000
    - host: democracy-app.de
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: democracy-app-srv
              servicePort: 3000
    - host: api.bundestag.io
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: bundestagio-srv
              servicePort: 3100
    - host: admin.bundestag.io
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: bundestagio-admin-srv
              servicePort: 3000
